# verifyhash

./: .env.example  .gitignore  .pre-commit-hooks.yaml  .scope-baseline.json  BACKLOG.md  HANDOFF.md  LICENSE  NOTICE  README.md  STRATEGY.md  hardhat.config.js  index.js  package-lock.json  package.json  strace.out  test_landing.py
einvoice/: "coverage_matrix.json  API.md  CORRECTNESS.md  COVERAGE.md  EXIT-CODES.md  NOTICE  PROVENANCE.md  QUICKSTART.md  README.md  REPORT-FORMATS.md  REPORT-SCHEMA.md  REPUBLISH-PYPI.md  SECURITY.md  SPEC.md  api_contract.json  attestation.json  bench_scale.py  cii_parity.json  conformance.py  coverage_matrix.json  differential.py  einvoice.py  gen_api_contract.py  gen_attestation.py  gen_cii_parity.py  gen_coverage.py  gen_examples.py  gen_export.py  gen_known_open_audit.py  gen_remediation.py  gen_rules_doc.py  gen_sb_fixtures.py  gen_sbom.py  gen_site.py  gen_syntax_binding.py  gen_testsuite_conformance.py  known_open_audit.json  prove.py  pyproject.toml  remediation_catalog.json  (+99 more)
einvoice/action/: README.md  action.yml  run.py
einvoice/ci/: .pre-commit-config.yaml  README.md  github-actions.yml  gitlab-ci.yml  pre-commit-einvoice.sh  validate-invoices.sh
einvoice/corpus/pdf/: make_pdf_fixtures.py
einvoice/corpus/synthetic/: synth-cii-bad-missing-seller-vat.xml  synth-cii-bad-vat-mismatch.xml  synth-cii-bad-xrechnung-nocontact.xml  synth-cii-good-multiline.xml  synth-cii-good-zero-rated.xml  synth-ubl-bad-exempt-noreason.xml  synth-ubl-bad-missing-buyerref.xml  (+3 more)
einvoice/einvoice/: README.md  RULES.md  __init__.py  __main__.py  _xmlsec.py  cli.py  codelists.py  config.py  coverage.py  parser.py  parser_cii.py  pdf_container.py  receipt.py  remediation.py  report.py  rules.py  rules_peppol.py  rules_xrechnung.py  syntax_binding.py  syntax_binding_eval.py  validate.py
einvoice/examples/: README.md
einvoice/export/: rules.json
einvoice/fixtures/: creditnote-invalid-typecode_ubl.xml  creditnote-invalid_cii.xml  creditnote-valid_cii.xml  sb-pass-clean_cii.xml  sb-viol-CII-DT-001_cii.xml  sb-viol-CII-DT-002_cii.xml  sb-viol-CII-DT-003_cii.xml  sb-viol-CII-DT-004_cii.xml  sb-viol-CII-DT-005_cii.xml  sb-viol-CII-DT-006_cii.xml  sb-viol-CII-DT-007_cii.xml  sb-viol-CII-DT-008_cii.xml  sb-viol-CII-DT-009_cii.xml  sb-viol-CII-DT-013_cii.xml  sb-viol-CII-DT-014_cii.xml  sb-viol-CII-DT-016_cii.xml  sb-viol-CII-DT-017_cii.xml  sb-viol-CII-DT-019_cii.xml  sb-viol-CII-DT-020_cii.xml  sb-viol-CII-DT-023_cii.xml  sb-viol-CII-DT-025_cii.xml  sb-viol-CII-DT-026_cii.xml  sb-viol-CII-DT-028_cii.xml  sb-viol-CII-DT-029_cii.xml  sb-viol-CII-DT-030_cii.xml  sb-viol-CII-DT-031_cii.xml  sb-viol-CII-DT-032_cii.xml  sb-viol-CII-DT-033_cii.xml  sb-viol-CII-DT-034_cii.xml  sb-viol-CII-DT-035_cii.xml  sb-viol-CII-DT-036_cii.xml  sb-viol-CII-DT-037_cii.xml  sb-viol-CII-DT-038_cii.xml  sb-viol-CII-DT-039_cii.xml  sb-viol-CII-DT-040_cii.xml  sb-viol-CII-DT-042_cii.xml  sb-viol-CII-DT-043_cii.xml  sb-viol-CII-DT-044_cii.xml  sb-viol-CII-DT-045_cii.xml  sb-viol-CII-DT-046_cii.xml  (+515 more)
einvoice/golden/: cii-bad-creditnote-381.json  cii-bad-xrechnung-business-example-02.json  cii-bad-xrechnung-example6.json  cii-good-creditnote-381.json  cii-good-xrechnung-example5.json  cii-good-xrechnung-huf.json  synth-cii-bad-missing-seller-vat.json  synth-cii-bad-vat-mismatch.json  synth-cii-bad-xrechnung-nocontact.json  synth-cii-good-multiline.json  synth-cii-good-zero-rated.json  synth-ubl-bad-exempt-noreason.json  synth-ubl-bad-missing-buyerref.json  synth-ubl-bad-vat-mismatch.json  synth-ubl-good-multiline.json  synth-ubl-good-xrechnung.json  ubl-bad-en16931-creditnote-root.json  ubl-bad-en16931-creditnote-typecode.json  ubl-bad-xrechnung-bis3-positive.json  ubl-good-en16931-bis3-positive.json  ubl-good-en16931-creditnote.json  ubl-good-xrechnung-xr-01.01a.json
einvoice/sbom/: bom.json
einvoice/www/: index.html  robots.txt  sitemap.xml
verifier-rs/: Cargo.toml  README.md
verifier-rs/src/: field.rs  json.rs  keccak.rs  main.rs  merkle.rs  secp256k1.rs
(+877 files in other folders)
